# python-turorial

./: Dockerfile  README.md  pyproject.toml
api/: db.py  migrate_db.py
api/routers/: task.py
fast-api-darkside/: Makefile  README.md  docker-compose.yaml  memo.md  openapi.json  pyproject.toml  schema.graphql  server.py
fast-api-darkside/app/: config.py  main.py  seeder.py
fast-api-darkside/app/admin/: __init__.py  main.py  resources.py
fast-api-darkside/app/config/: __init__.py  db.py
fast-api-darkside/app/cruds/: client.py  member.py  member_cost.py  project.py  project_budget.py  project_member_assign.py  project_slot.py
fast-api-darkside/app/graphql/: schema.py
fast-api-darkside/app/models/: __init__.py  admin.py  client.py  member.py  member_cost.py  project.py  project_budget.py  project_member_assign.py  project_slot.py
fast-api-darkside/app/routers/: admin.py  client.py  member.py  member_cost.py  project.py  project_budget.py  project_member_assign.py  project_slot.py
fast-api-darkside/app/schemas/: client.py  member.py  member_cost.py  project.py  project_budget.py  project_member_assign.py  project_slot.py
fast-api-darkside/migrations/models/: 0_20240210180312_init.py  1_20240210180350_member_drop_cloumn_phone.py  2_20240210180440_member_add_cloumn_phone.py
fast-api-darkside/tests/: __init__.py  conftest.py  test_client.py
fast-api-todo/: README.md  docker-compose.yaml  pyproject.toml
fast-api-todo/tests/: test_main.py
fastapi-admin-tutorial/: docker-compose.yaml
fastapi-admin-tutorial/src/: main.py
nextjs-tutorial/: package-lock.json  package.json
react-admin-darkside/: README.md
react-admin-darkside/test-admin/: package-lock.json  package.json
react-dnd/: README.md  package-lock.json  package.json
react-dnd/src/: App.tsx  Example.tsx
study-react/: package.json
study-react/pages/: about.tsx  index.tsx
(+28 files in other folders)
