[tool.poetry]
name = "fast-api-darkside"
version = "0.1.0"
description = ""
authors = ["gzhhggg <keiichimonoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
fastapi-admin = "^1.0.4"
tortoise-orm = "^0.20.0"
aiomysql = "^0.2.0"
aerich = "^0.7.2"
email-validator = "^2.1.0.post1"
uvicorn = "^0.27.0.post1"
faker = "^23.1.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.1"
strawberry-graphql = "^0.219.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"


[tool.aerich]
tortoise_orm = "app.config.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
